packages/compiler-rs/tests/snapshots/transform_template_ref__dynamic_ref.snap
---
source: tests/transform_template_ref.rs
expression: code
---
import { createTemplateRefSetter as _createTemplateRefSetter, renderEffect as _renderEffect, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const _setTemplateRef = _createTemplateRefSetter();
  const n0 = t0();
  let r0;
  _renderEffect(() => r0 = _setTemplateRef(n0, foo, r0));
  return n0;
})();
